name:          dd
version:       0
license:       BSD2
license-File:  LICENSE.md
copyright:     (c) Edward Kmett 2018
author:        Edward Kmett
maintainer:    ekmett@gmail.com
stability:     Experimental
category:      Logic
homepage:      http://github.com/ekmett/dd
bug-reports:   http://github.com/ekmett/dd/issues
build-type:    Simple
cabal-version: 2
synopsis:      Binary Decision Diagrams
description:   Binary Decision Diagrams.
extra-source-files: .gitignore CHANGELOG.md LICENSE.md README.md

source-repository head
  type: git
  location: git://github.com/ekmett/dd.git

library
  default-language: Haskell2010
  cc-options:  -Wall -mavx -mavx2 -std=c++14
  ghc-options: -Wall -fllvm
  extra-libraries: stdc++
  exposed-modules: DD
  build-depends:
    base >= 4.9 && < 5,
    inline-c,
    inline-c-cpp
