name:          dd
version:       0
license:       BSD2
license-File:  LICENSE.md
copyright:     (c) Edward Kmett 2018
author:        Edward Kmett
maintainer:    ekmett@gmail.com
stability:     Experimental
category:      Logic
homepage:      http://github.com/ekmett/dd
bug-reports:   http://github.com/ekmett/dd/issues
build-type:    Simple
cabal-version: 2
synopsis:      Binary Decision Diagrams
description:   Binary Decision Diagrams.
extra-source-files: .gitignore CHANGELOG.md LICENSE.md README.md

source-repository head
  type: git
  location: git://github.com/ekmett/dd.git

library
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    heredoc,
    inline-c,
    inline-c-cpp

  -- c++ 
  cc-options:  -Wall -mavx -mavx2 -std=c++14
  include-dirs: cpp
  c-sources: cpp/bar.cpp
  extra-libraries: stdc++

  -- haskell
  ghc-options: -Wall -fllvm
  hs-source-dirs: src
  exposed-modules: DD
